--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,10 @@ flutter:
     - family:  MyFlutterApp
       fonts:
         - asset: assets/MyFlutterApp.ttf
+        - asset: assets/Roboto-Regular.ttf
+    - family:  Roboto
+      fonts:
+        - asset: assets/Roboto-Regular.ttf
     # - family: Schyler
     #   fonts:
     #     - asset: fonts/Schyler-Regular.ttf
