--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/games/level2/
+    - assets/images/games/level3/
+    - assets/images/games/level4/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
