--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/games/
     - assets/images/games/Level 1/
     - assets/images/firstLawOfMotion/
     - assets/images/secondLawOfMotion/
