--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
     - assets/images/games/level2/
     - assets/images/games/level3/
     - assets/images/games/level4/
-    - assets/images/games/Level 1/
+    - assets/images/games/Level1/
     - assets/images/firstLawOfMotion/
     - assets/images/secondLawOfMotion/
   #   - images/a_dot_burr.jpeg
