--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,8 @@ flutter:
     - assets/images/games/level2/
     - assets/images/games/level3/
     - assets/images/games/level4/
-    - assets/images/games/Level 1/
+    - assets/images/games/level5/
+    - assets/images/games/Level1/
     - assets/images/firstLawOfMotion/
     - assets/images/secondLawOfMotion/
   #   - images/a_dot_burr.jpeg
