--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.1
   audioplayers: ^0.20.1
   flutter_pdfview: ^1.2.1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
