--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.1
   audioplayers: ^0.20.1
   flutter_pdfview: ^1.2.1
+  flutter_sound: ^8.4.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/music.mp3
     - assets/sample.mp3
     - assets/images/
     - assets/images/games/
